@@ -98,59 +98,61 @@ function wrapQueryable (connection, objType, agent) {
 
   function wrapQuery (original) {
     return function wrappedQuery (sql, values, cb) {
-      var span = agent.startSpan(null, 'db', 'mysql', 'query')
-      var id = span && span.transaction.id
+      agent.logger.debug('intercepted call to mysql %s.query', objType)
+
+      var span = ins.createSpan(null, 'db', 'mysql', 'query')
+      if (!span) {
+        return original.apply(this, arguments)
+      }
+
       var hasCallback = false
       var sqlStr
 
-      agent.logger.debug('intercepted call to mysql %s.query %o', objType, { id: id })
-
-      if (span) {
-        if (this[symbols.knexStackObj]) {
-          span.customStackTrace(this[symbols.knexStackObj])
-          this[symbols.knexStackObj] = null
-        }
-
-        const wrapCallback = function (origCallback) {
-          hasCallback = true
-          return ins.bindFunction(function wrappedCallback (_err) {
-            span.end()
-            return origCallback.apply(this, arguments)
-          })
-        }
-
-        switch (typeof sql) {
-          case 'string':
-            sqlStr = sql
-            break
-          case 'object':
-            if (typeof sql._callback === 'function') {
-              sql._callback = wrapCallback(sql._callback)
-            }
-            sqlStr = sql.sql
-            break
-          case 'function':
-            arguments[0] = wrapCallback(sql)
-            break
-        }
-
-        if (sqlStr) {
-          agent.logger.debug('extracted sql from mysql query %o', { id: id, sql: sqlStr })
-          span.setDbContext({ statement: sqlStr, type: 'sql' })
-          span.name = sqlSummary(sqlStr)
-        }
-        span.setDestinationContext(getDBDestination(span, host, port))
-
-        if (typeof values === 'function') {
-          arguments[1] = wrapCallback(values)
-        } else if (typeof cb === 'function') {
-          arguments[2] = wrapCallback(cb)
-        }
+      if (this[symbols.knexStackObj]) {
+        span.customStackTrace(this[symbols.knexStackObj])
+        this[symbols.knexStackObj] = null
       }
 
-      var result = original.apply(this, arguments)
+      const wrapCallback = function (origCallback) {
+        hasCallback = true
+        return ins.bindFunction(function wrappedCallback (_err) {
+          span.end()
+          return origCallback.apply(this, arguments)
+        })
+      }
 
-      if (span && !hasCallback && result instanceof EventEmitter) {
+      switch (typeof sql) {
+        case 'string':
+          sqlStr = sql
+          break
+        case 'object':
+          if (typeof sql._callback === 'function') {
+            sql._callback = wrapCallback(sql._callback)
+          }
+          sqlStr = sql.sql
+          break
+        case 'function':
+          arguments[0] = wrapCallback(sql)
+          break
+      }
+
+      if (sqlStr) {
+        agent.logger.debug({ sql: sqlStr }, 'extracted sql from mysql query')
+        span.setDbContext({ statement: sqlStr, type: 'sql' })
+        span.name = sqlSummary(sqlStr)
+      }
+      span.setDestinationContext(getDBDestination(span, host, port))
+
+      if (typeof values === 'function') {
+        arguments[1] = wrapCallback(values)
+      } else if (typeof cb === 'function') {
+        arguments[2] = wrapCallback(cb)
+      }
+
+      const spanRunContext = ins.currRunContext().enterSpan(span)
+      const result = ins.withRunContext(spanRunContext, original, this, ...arguments)
+
+      if (!hasCallback && result instanceof EventEmitter) {
         // Wrap `result.emit` instead of `result.once('error', ...)` to avoid
         // changing app behaviour by possibly setting the only 'error' handler.
         shimmer.wrap(result, 'emit', function (origEmit) {
@@ -166,7 +168,7 @@ function wrapQueryable (connection, objType, agent) {
             return origEmit.apply(this, arguments)
           }
         })
-        // Ensure event handlers execute in this run context.
+        // Ensure event handlers execute in the caller run context.
         ins.bindEmitter(result)
       }
 
